@@ -12,6 +12,8 @@ PbootCMS V2.0.5 build 2020-01-30
 5、新增系统自适应入口文件子目录的能力；
 6、新增留言及表单数据清空功能(管理员)；
 7、新增留言及表单数据导出功能；
+8、新增mark=1标签参数对搜索结果关键字进行标红，如：[search:title mark=1]；
+9、其他问题修复与优化。
 
 PbootCMS V2.0.4 build 2020-01-21
 1、修复部分循环体控制参数无效问题；
